# CMAP_LYSO_Example

./: CMakeLists.txt  LYSO.cc  README.md  run.param
data/Lu1.6Y0.4SiO5/: single_line.txt
include/: UserDetectorConstruction.hh  UserPrimaryGeneratorAction.hh  UserRunAction.hh  UserWorldConstruction.hh
scripts/: GetTrackData.cc  track_data_processing.ipynb
src/: UserDetectorConstruction.cc  UserPrimaryGeneratorAction.cc  UserRunAction.cc  UserWorldConstruction.cc
